codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_empty_then_non_empty_after.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: combined
---
• Waited for background terminal · just fix

• Running just fix in background (Use down arrow to see details)

↳ Interacted with background terminal · just fix
  └ ls
