codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_unknown_end_with_active_exploring_cell.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: snapshot
---
History:
• Running echo repro-marker in background (Use down arrow to see details)

Active:
• Read 1 file
